# catdex-api

./: .gitignore  Cargo.toml
scripts/: init_db.sh
src/: errors.rs  main.rs  models.rs
static/: cat.html  index.html
