[package]
name = "catdex-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-rt = "2.9.0"
actix-web = "4.3.1"
awmp = "0.8.1"
derive_more = "0.99.17"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"]}
env_logger = "0.11.2"
handlebars = { version = "4.3.5", features = ["dir_source"]}
log = "0.4.20"
r2d2 = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.89"
validator = { version = "0.16.1", features = ["derive"] }
